add google trends scripts

--- a/app/index.html
+++ b/app/index.html
@@ -52,9 +52,15 @@
         <div class="col-lg-6">
         </div>
       </div>
+	
+	<div id="google_trends">
+	<p>GOOGLE TRENDS</p>
+	<script type="text/javascript" src="//www.google.com/trends/embed.js?hl=en-US&q=digital+privacy&tz=Etc/GMT%2B4&content=1&cid=GEO_MAP_0_0&export=5&w=500&h=530"></script>
+	<script type="text/javascript" src="//www.google.com/trends/embed.js?hl=en-US&q=digital+privacy&tz=Etc/GMT%2B4&content=1&cid=GEO_TABLE_0_0&export=5&w=500&h=330"></script>
+	</div>      
 
-      <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+	<div class="footer">
+        	<p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
       </div>
     </div>
 
