--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,22 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+    <script>window.twttr = (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0],
+      t = window.twttr || {};
+    if (d.getElementById(id)) return t;
+    js = d.createElement(s);
+    js.id = id;
+    js.src = "https://platform.twitter.com/widgets.js";
+    fjs.parentNode.insertBefore(js, fjs);
+
+    t._e = [];
+    t.ready = function(f) {
+      t._e.push(f);
+    };
+
+    return t;
+  }(document, "script", "twitter-wjs"));</script>
 
   </head>
   <body>
@@ -50,8 +66,33 @@
 
       <div class="row">
         <div class="col-lg-6">
-        </div>
+          </div>
       </div>
+
+      <!-- bower:js -->
+      <script src="/bower_components/jquery/dist/jquery.js"></script>
+      <!-- endbower -->
+      <!-- include source files here... -->
+      <!-- include spec files here... -->
+      <script src="spec/test.js"></script>
+      <a class="twitter-timeline"  href="https://twitter.com/hashtag/coffee" data-widget-id="620253773642928128">#corgi Tweets</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    <script>
+        if (navigator.userAgent.indexOf('PhantomJS') === -1) {
+          mocha.run();
+        }
+</script>
+
+
+
+
+
+
+
+
+
+
+
 
       <div class="footer">
         <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
