adding dynamic search form

--- a/app/index.html
+++ b/app/index.html
@@ -172,6 +172,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <script src="/bower_components/react/JSXTransformer.js"></script>
+    <scrip src="/node_modules/babel-core/browser-polyfill.js"></scrip>
 
 
     <!-- build:js(.) scripts/plugins.js -->
